Fix for Plugin paints in the wrong part of the screen when on an absolute Div or scrolled bug 120821 r=kmcclusk@netscape.com sr=beard